# sandbox_project

./: .gitignore  CMakeLists.txt  README.md
shaders/: basics.frag  basics.loccol.frag  basics.loccol.vert  basics.uniform.frag  basics.vert  texture.fs  texture.vs
src/: main.cpp
src/1.getting_started/1.hello_triangle_exercises/: hello_triangle_exercise3.cpp
src/1.getting_started/2.shaders/: shaders_uniform.cpp  shaders_uniform_1.cpp  shaders_uniform_2.cpp
src/1.getting_started/3.textures/: textures_exercises.cpp
src/exercises/1.getting_started/: hello_triangle_exercise1.cpp  hello_triangle_exercise2.cpp
src/graphics/: CMakeLists.txt  shader.cpp  shader.h  window.cpp  window.h
src/input/: input.cpp  input.h
src/utils/: fileutils.cpp  fileutils.h
